# sympl

./: .gitignore  CMakeLists.txt  README.md  SConstruct
compiler/: CMakeLists.txt  main.cpp
docs/: ideas.md  (+1 more)
src/cli/: CMakeLists.txt  main.cpp
src/sympl/: CMakeLists.txt  Sympl.hpp  SymplPCH.hpp  sympl_headers.hpp  sympl_pch.hpp
src/sympl/Core/: CMakeLists.txt  StringBuffer.cpp  StringBuffer.hpp
src/sympl/Memory/: CMakeLists.txt  ManagedObject.cpp  ManagedObject.hpp  MemBlock.cpp  MemBlock.hpp  MemPool.cpp  MemPool.hpp  ObjectRef.hpp  ObjectRefInfo.cpp  SharedPtr.cpp  SharedPtr.hpp  SharedPtrRef.hpp
src/sympl/Parser/: CMakeLists.txt  IllegalCharacterError.cpp  Interpreter.cpp  Interpreter.hpp  InvalidSyntaxError.cpp  InvalidSyntaxError.hpp  Lexer.cpp  Lexer.hpp  LexerPosition.cpp  LexerPosition.hpp  ParseResult.cpp  ParseResult.hpp  Parser.cpp  Parser.hpp  ParserContext.cpp  ParserContext.hpp  ParserRuntimeResult.cpp  ParserRuntimeResult.hpp  ScopeContext.cpp  ScopeContext.hpp  SymbolTable.cpp  SymbolTable.hpp  SymplError.hpp  SymplVM.cpp  SymplVM.hpp  Token.cpp  Token.hpp
src/sympl/Parser/Error/: IllegalCharacterError.cpp  IllegalCharacterError.hpp  InvalidSyntaxError.cpp  InvalidSyntaxError.hpp  ParserError.cpp  ParserError.hpp  RuntimeError.cpp  RuntimeError.hpp
src/sympl/Parser/Handle/: BaseFuncHandle.cpp  BaseFuncHandle.hpp  BuiltInFuncHandle.cpp  BuiltInFuncHandle.hpp  CompareHandle.cpp  CompareHandle.hpp  ExceptionHandle.cpp  ExceptionHandle.hpp  FloatHandle.cpp  FloatHandle.hpp  FuncHandle.cpp  FuncHandle.hpp  IntHandle.cpp  IntHandle.hpp  ListHandle.cpp  ListHandle.hpp  NullHandle.cpp  NullHandle.hpp  NumberHandle.cpp  NumberHandle.hpp  ObjectHandle.cpp  ObjectHandle.hpp  StringHandle.cpp  StringHandle.hpp  ValueHandle.cpp  ValueHandle.hpp
src/sympl/Parser/Node/: ParserAccessScopeNode.cpp  ParserAccessScopeNode.hpp  ParserBinaryOpNode.cpp  ParserBinaryOpNode.hpp  ParserBreakNode.cpp  ParserBreakNode.hpp  ParserCallNode.cpp  ParserCallNode.hpp  ParserContinueNode.cpp  ParserContinueNode.hpp  ParserForNode.cpp  ParserForNode.hpp  ParserFuncDefNode.cpp  ParserFuncDefNode.hpp  ParserIfNode.cpp  ParserIfNode.hpp  ParserListNode.cpp  ParserListNode.hpp  ParserNewObjectNode.cpp  ParserNewObjectNode.hpp  ParserNode.cpp  ParserNode.hpp  ParserNumberNode.cpp  ParserNumberNode.hpp  ParserObjectNode.cpp  ParserObjectNode.hpp  ParserReturnNode.cpp  ParserReturnNode.hpp  ParserScopeAccessNode.cpp  ParserScopeAccessNode.hpp  ParserStringNode.cpp  ParserStringNode.hpp  ParserUnaryOpNode.cpp  ParserUnaryOpNode.hpp  ParserWhileNode.cpp  ParserWhileNode.hpp  VarAccessNode.cpp  VarAccessNode.hpp  VarAssignNode.cpp  VarAssignNode.hpp
src/sympl/SymplLib/: CMakeLists.txt
src/sympl/System/: CMakeLists.txt  IllegalCharacterError.hpp  InvalidSyntaxError.cpp  InvalidSyntaxError.hpp  Lexer.cpp  Lexer.hpp  LexerPosition.cpp  LexerPosition.hpp  ParseResult.cpp  ParseResult.hpp  Parser.cpp  Parser.hpp  ParserBinaryNode.cpp  ParserBinaryNode.hpp  ParserNode.cpp  ParserNode.hpp  ParserNumberNode.cpp  ParserNumberNode.hpp  Sympl.hpp  SymplError.cpp  SymplError.hpp  SymplPCH.hpp  SyntaxError.cpp  SyntaxError.hpp  Token.cpp  Token.hpp
src/sympl/Test/: CMakeLists.txt
src/sympl/Test/Memory/: ManagedObjectTest.cpp  ManagedObjectTest.hpp
src/sympl/core/: CMakeLists.txt  alloc.c  alloc.cpp  alloc.h  alloc_manager.cpp  alloc_manager.h  dynamic_mem_pool.h  mempool.cpp  mempool.h  mutex.cpp  mutex.h  object.cpp  object.h  object_ref.cpp  object_ref.h  ref.cpp  ref.h  registry.cpp  registry.h  shared_ptr.h  shared_ref.cpp  shared_ref.h  string_buffer.c  string_buffer.cpp  string_buffer.h  string_buffer.hpp  sympl.h  sympl_number_helper.cpp  sympl_number_helper.h  sympl_object.cpp  sympl_object.h  sympl_pch.h  sympl_ref.cpp  sympl_ref.h  thread.cpp  thread.h  variant.cpp  variant.h  weak_ptr.h  weak_ref.h
src/sympl/include/Core/: StringBuffer.hpp
src/sympl/include/Memory/: ManagedObject.hpp  MemBlock.hpp  MemPool.hpp  ObjectRef.hpp  ObjectRefInfo.hpp  SharedPtr.hpp  WeakPtr.hpp
src/sympl/include/Parser/: Interpreter.hpp  Lexer.hpp  LexerPosition.hpp  ParseResult.hpp  Parser.hpp  ParserContext.hpp  ParserRuntimeResult.hpp  SymbolTable.hpp  SymplVM.hpp  Token.hpp
src/sympl/io/: script_compiler.cpp  script_compiler.h  script_parser.cpp  script_parser.h  script_reader.cpp  script_reader.h  script_symbol.cpp  script_symbol.h  writer.c  writer.h
src/sympl/memory/: managed_object.cpp  managed_object.hpp  mem_block.cpp  mem_block.hpp  mem_pool.cpp  mem_pool.hpp  object_ref.hpp  object_ref_info.cpp  object_ref_info.hpp  shared_ptr.hpp  weak_ptr.hpp
src/sympl/script/: CMakeLists.txt  interpreter.cpp  interpreter.h  method_cache_entry.h  method_registry.cpp  method_registry.h  ref_registry.cpp  ref_registry.h  script_array.cpp  script_array.h  script_common.h  script_context.cpp  script_context.h  script_method.cpp  script_method.h  script_method_ref.cpp  script_method_ref.h  script_object.cpp  script_object.h  script_object_ref.cpp  script_object_ref.h  script_parser.cpp  script_parser.h  script_reader.cpp  script_reader.h  script_statement.cpp  script_statement.h  script_token.cpp  script_token.h  script_vm.cpp  script_vm.h  statement_cache.cpp  statement_cache.h  statement_entry.cpp  statement_entry.h  statement_resolver.cpp  statement_resolver.h  sympl_vm.cpp  sympl_vm.h
src/sympl/script/cache/: script_cache.cpp  script_cache.h  script_cache_object.cpp  script_cache_object.h
src/sympl/script/keywords/: keyword_handle.cpp  keyword_handle.h  keyword_registry.cpp  keyword_registry.h
src/sympl/script/methods/: callback_method.cpp  callback_method.h  if_method.cpp  if_method.h  method_handle.h  method_registry.cpp  method_registry.h  print_method.cpp  print_method.h  while_method.cpp  while_method.h
src/sympl/script/resolvers/: array_resolver.cpp  array_resolver.h  eval_resolver.cpp  eval_resolver.h  method_resolver.cpp  method_resolver.h  object_resolver.h
src/sympl/util/: CMakeLists.txt  number_helper.cpp  number_helper.h  profiler.cpp  profiler.h  string_helper.cpp  string_helper.h
(+220 files in other folders)
